Regen for commit 6b3a95d5b90f5bde4789959cbf1bf26c90ef5206
Signed-off-by: GitHub <noreply@github.com>

--- a/docs/components/modules/languages/nav.adoc
+++ b/docs/components/modules/languages/nav.adoc
@@ -5,6 +5,7 @@
 ** xref:bean-language.adoc[Bean Method]
 ** xref:constant-language.adoc[Constant]
 ** xref:csimple-language.adoc[CSimple]
+** xref:datasonnet-language.adoc[DataSonnet]
 ** xref:exchangeProperty-language.adoc[ExchangeProperty]
 ** xref:file-language.adoc[File]
 ** xref:groovy-language.adoc[Groovy]
